tests/fixtures/invalid/round_int_float.py
# Cannot call round() with Int, Float
x = round(1, 1.0)
